📝 docs: update description for AI Weather Report

--- a/ai_weather_report/ai_weather_report.yaml
+++ b/ai_weather_report/ai_weather_report.yaml
@@ -1,11 +1,9 @@
 blueprint:
   name: 🤖 AI Weather Report Generator
   description: >
-    Fetches weather forecasts at regular intervals, uses AI to create an emoji-rich
+    📦 [Version 1.0.2] Fetches weather forecasts at regular intervals, uses AI to create an emoji-rich
     summary, and stores it in a text helper. Perfect for dashboard displays or
     notifications! ☀️🌧️⛈️
-
-    Version: 1.0.2
   domain: automation
   author: r3mcos3
   homeassistant:
