📝 docs: update description for Sun Aware Motion Light

--- a/sun_aware_motion_light/sun_aware_motion_light.yaml
+++ b/sun_aware_motion_light/sun_aware_motion_light.yaml
@@ -1,9 +1,8 @@
 blueprint:
   name: ✨💡 Sun-aware Motion Light Control 🏃‍♂️☀️
   description: >-
-    💡 Smart Light Control for Motion 🏃‍♂️. Turns on a light with adjustable brightness when motion is detected.
+    📦 [Version 1.0] Smart Light Control for Motion 🏃‍♂️. Turns on a light with adjustable brightness when motion is detected.
     Optionally, it can use different brightness levels depending on the sun's position 🌅.
-    Version: 1.0
   domain: automation
   source_url: https://github.com/r3mconl/blueprints/blob/main/sun_aware_motion_light/sun_aware_motion_light.yaml
   author: r3mcos3
