🔖 Include version number in blueprint description

--- a/persistent_motion_light/persistent_motion_light.yaml
+++ b/persistent_motion_light/persistent_motion_light.yaml
@@ -4,6 +4,8 @@ blueprint:
   author: r3mcos3
   source_url: https://github.com/r3mcos3/blueprints/blob/main/persistent_motion_light/persistent_motion_light.yaml
   description: >
+    📦 [Version 1.0]
+    
     ## 💡 Control a light based on motion
     
     This blueprint ensures your light stays **ON** as long as there is motion.
