--- a/smart_heating/smart_heating.yaml
+++ b/smart_heating/smart_heating.yaml
@@ -1,4 +1,4 @@
-# Version: 1.3.1
+# Version: 1.4.0
 blueprint:
   domain: automation
   name: "🔥 Smart Heating Controller"
@@ -7,7 +7,7 @@ blueprint:
   homeassistant:
     min_version: 2025.12.0
   description: >
-    📦 [Version 1.3.1] Intelligent climate control with presence detection, door/window protection,
+    📦 [Version 1.4.0] Intelligent climate control with presence detection, door/window protection,
     manual override, and energy-saving features! 🌡️
 
 
@@ -93,9 +93,9 @@ blueprint:
       collapsed: true
       input:
         comfort_temp:
-          name: "🏠 Comfort Temperature"
+          name: "🏠 Comfort Temperature (Default)"
           description: >
-            Target temperature when people are home.
+            Default target temperature when people are home. This value is used when no helper is configured.
           default: 21
           selector:
             number:
@@ -104,6 +104,18 @@ blueprint:
               step: 1
               unit_of_measurement: "°C"
               mode: slider
+
+        comfort_temp_helper:
+          name: "🎛️ Comfort Temperature Helper (Optional)"
+          description: >
+            Optional input_number helper to dynamically adjust comfort temperature via UI.
+            When configured, this overrides the default comfort temperature above.
+            Create a helper: input_number.heating_comfort_temp (min: 5, max: 25, step: 0.5)
+          default: {}
+          selector:
+            entity:
+              filter:
+                - domain: input_number
 
         away_temp:
           name: "🏃 Away Temperature"
@@ -305,8 +317,15 @@ variables:
   zone: !input presence_zone
   door_sensors: !input door_window_sensors
 
-  # Temperature settings
-  temp_comfort: !input comfort_temp
+  # Temperature settings - comfort temp uses helper if configured, otherwise default
+  comfort_temp_default: !input comfort_temp
+  comfort_temp_entity: !input comfort_temp_helper
+  temp_comfort: >
+    {% if comfort_temp_entity != {} and comfort_temp_entity != '' %}
+      {{ states(comfort_temp_entity) | float(comfort_temp_default) }}
+    {% else %}
+      {{ comfort_temp_default }}
+    {% endif %}
   temp_away: !input away_temp
   temp_frost: !input frost_protection_temp
   temp_night: !input night_temp
@@ -392,6 +411,11 @@ triggers:
   - trigger: state
     entity_id: !input override_helper
     id: override_toggled
+
+  # ===== COMFORT TEMPERATURE HELPER CHANGE =====
+  - trigger: state
+    entity_id: !input comfort_temp_helper
+    id: comfort_temp_changed
 
 conditions: []
 
@@ -771,6 +795,23 @@ actions:
             data:
               temperature: "{{ target_temp }}"
               hvac_mode: heat
+
+      # ----- COMFORT TEMPERATURE HELPER CHANGED -----
+      - conditions:
+          - condition: trigger
+            id: comfort_temp_changed
+          - condition: template
+            value_template: "{{ target_mode == 'comfort' }}"
+          - condition: template
+            value_template: "{{ people_count > 0 }}"
+          - condition: template
+            value_template: "{{ not override_is_active }}"
+        sequence:
+          - action: climate.set_temperature
+            target:
+              entity_id: "{{ climate }}"
+            data:
+              temperature: "{{ temp_comfort + humidity_adjustment | float(0) }}"
 
       # ----- STARTUP / RELOAD (initialize state) -----
       - conditions:
